# ServerScrabble

./: .gitignore  CMakeLists.txt  CNode.cpp  CNode.h  Cuadricula.cpp  Cuadricula.h  Ficha.cpp  Ficha.h  FichaCreator.cpp  FichaCreator.h  Juego.cpp  Juego.h  Jugador.cpp  Jugador.h  List.cpp  List.h  Node.cpp  Node.h  NodeFicha.cpp  NodeFicha.h  README.md  Scrabble.pro  diccio.txt  main.cpp  mainCLion.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  window.cpp  window.h
Servidor/: Cuadricula.cpp  Cuadricula.h  Node.cpp  Node.h  main.cpp
